// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`highlights under 1`] = `
<div
  className="search-navigator-facet-box"
  data-key="foo"
>
  <ul
    className="search-navigator-facet-list projects-facet-list"
  >
    <li
      key="1"
    >
      <button
        aria-checked={false}
        aria-label="1"
        className="facet search-navigator-facet projects-facet button-link"
        data-key={1}
        onClick={[Function]}
        role="checkbox"
        tabIndex={0}
        type="button"
      >
        <span
          className="facet-name"
        >
          1
        </span>
      </button>
    </li>
    <li
      className="search-navigator-facet-worse-than-highlight"
      key="2"
    >
      <button
        aria-checked={false}
        aria-label="2"
        className="facet search-navigator-facet projects-facet button-link"
        data-key={2}
        onClick={[Function]}
        role="checkbox"
        tabIndex={0}
        type="button"
      >
        <span
          className="facet-name"
        >
          2
        </span>
      </button>
    </li>
    <li
      className="search-navigator-facet-worse-than-highlight last"
      key="3"
    >
      <button
        aria-checked={false}
        aria-label="3"
        className="facet search-navigator-facet projects-facet button-link"
        data-key={3}
        onClick={[Function]}
        role="checkbox"
        tabIndex={0}
        type="button"
      >
        <span
          className="facet-name"
        >
          3
        </span>
      </button>
    </li>
  </ul>
</div>
`;

exports[`hightlights under selected 1`] = `
<div
  className="search-navigator-facet-box"
  data-key="foo"
>
  <ul
    className="search-navigator-facet-list projects-facet-list"
  >
    <li
      key="1"
    >
      <button
        aria-checked={false}
        aria-label="1"
        className="facet search-navigator-facet projects-facet button-link"
        data-key={1}
        onClick={[Function]}
        role="checkbox"
        tabIndex={0}
        type="button"
      >
        <span
          className="facet-name"
        >
          1
        </span>
      </button>
    </li>
    <li
      className="search-navigator-facet-worse-than-highlight active"
      key="2"
    >
      <button
        aria-checked={true}
        aria-label="2"
        className="facet search-navigator-facet projects-facet button-link active"
        data-key={2}
        onClick={[Function]}
        role="checkbox"
        tabIndex={0}
        type="button"
      >
        <span
          className="facet-name"
        >
          2
        </span>
      </button>
    </li>
    <li
      className="search-navigator-facet-worse-than-highlight last"
      key="3"
    >
      <button
        aria-checked={true}
        aria-label="3"
        className="facet search-navigator-facet projects-facet button-link"
        data-key={3}
        onClick={[Function]}
        role="checkbox"
        tabIndex={0}
        type="button"
      >
        <span
          className="facet-name"
        >
          3
        </span>
      </button>
    </li>
  </ul>
</div>
`;

exports[`renders 1`] = `
<div
  className="search-navigator-facet-box"
  data-key="foo"
>
  <ul
    className="search-navigator-facet-list projects-facet-list"
  >
    <li
      key="1"
    >
      <button
        aria-checked={false}
        aria-label="1"
        className="facet search-navigator-facet projects-facet button-link"
        data-key={1}
        onClick={[Function]}
        role="checkbox"
        tabIndex={0}
        type="button"
      >
        <span
          className="facet-name"
        >
          1
        </span>
      </button>
    </li>
    <li
      key="2"
    >
      <button
        aria-checked={false}
        aria-label="2"
        className="facet search-navigator-facet projects-facet button-link"
        data-key={2}
        onClick={[Function]}
        role="checkbox"
        tabIndex={0}
        type="button"
      >
        <span
          className="facet-name"
        >
          2
        </span>
      </button>
    </li>
    <li
      key="3"
    >
      <button
        aria-checked={false}
        aria-label="3"
        className="facet search-navigator-facet projects-facet button-link"
        data-key={3}
        onClick={[Function]}
        role="checkbox"
        tabIndex={0}
        type="button"
      >
        <span
          className="facet-name"
        >
          3
        </span>
      </button>
    </li>
  </ul>
</div>
`;

exports[`renders facet bar chart 1`] = `
<div
  className="search-navigator-facet-box"
  data-key="foo"
>
  <ul
    className="search-navigator-facet-list projects-facet-list"
  >
    <li
      key="a"
    >
      <button
        aria-checked={false}
        aria-label="a"
        className="facet search-navigator-facet projects-facet button-link"
        data-key="a"
        onClick={[Function]}
        role="checkbox"
        tabIndex={0}
        type="button"
      >
        <span
          className="facet-name"
        >
          a
        </span>
        <span
          className="facet-stat"
        >
          17
          <div
            className="projects-facet-bar"
          >
            <div
              className="projects-facet-bar-inner"
              style={
                {
                  "width": 42.5,
                }
              }
            />
          </div>
        </span>
      </button>
    </li>
    <li
      key="b"
    >
      <button
        aria-checked={false}
        aria-label="b"
        className="facet search-navigator-facet projects-facet button-link"
        data-key="b"
        onClick={[Function]}
        role="checkbox"
        tabIndex={0}
        type="button"
      >
        <span
          className="facet-name"
        >
          b
        </span>
        <span
          className="facet-stat"
        >
          15
          <div
            className="projects-facet-bar"
          >
            <div
              className="projects-facet-bar-inner"
              style={
                {
                  "width": 37.5,
                }
              }
            />
          </div>
        </span>
      </button>
    </li>
    <li
      key="c"
    >
      <button
        aria-checked={false}
        aria-label="c"
        className="facet search-navigator-facet projects-facet button-link"
        data-key="c"
        onClick={[Function]}
        role="checkbox"
        tabIndex={0}
        type="button"
      >
        <span
          className="facet-name"
        >
          c
        </span>
        <span
          className="facet-stat"
        >
          24
          <div
            className="projects-facet-bar"
          >
            <div
              className="projects-facet-bar-inner"
              style={
                {
                  "width": 60,
                }
              }
            />
          </div>
        </span>
      </button>
    </li>
  </ul>
</div>
`;

exports[`renders header and footer 1`] = `
<div
  className="search-navigator-facet-box"
  data-key="foo"
>
  <header />
  <ul
    className="search-navigator-facet-list projects-facet-list"
  >
    <li
      key="1"
    >
      <button
        aria-checked={false}
        aria-label="1"
        className="facet search-navigator-facet projects-facet button-link"
        data-key={1}
        onClick={[Function]}
        role="checkbox"
        tabIndex={0}
        type="button"
      >
        <span
          className="facet-name"
        >
          1
        </span>
      </button>
    </li>
    <li
      key="2"
    >
      <button
        aria-checked={false}
        aria-label="2"
        className="facet search-navigator-facet projects-facet button-link"
        data-key={2}
        onClick={[Function]}
        role="checkbox"
        tabIndex={0}
        type="button"
      >
        <span
          className="facet-name"
        >
          2
        </span>
      </button>
    </li>
    <li
      key="3"
    >
      <button
        aria-checked={false}
        aria-label="3"
        className="facet search-navigator-facet projects-facet button-link"
        data-key={3}
        onClick={[Function]}
        role="checkbox"
        tabIndex={0}
        type="button"
      >
        <span
          className="facet-name"
        >
          3
        </span>
      </button>
    </li>
  </ul>
  <footer />
</div>
`;

exports[`renders multiple selected 1`] = `
<div
  className="search-navigator-facet-box"
  data-key="foo"
>
  <ul
    className="search-navigator-facet-list projects-facet-list"
  >
    <li
      className="active"
      key="1"
    >
      <button
        aria-checked={true}
        aria-label="1"
        className="facet search-navigator-facet projects-facet button-link active"
        data-key={1}
        onClick={[Function]}
        role="checkbox"
        tabIndex={0}
        type="button"
      >
        <span
          className="facet-name"
        >
          1
        </span>
      </button>
    </li>
    <li
      className="active"
      key="2"
    >
      <button
        aria-checked={true}
        aria-label="2"
        className="facet search-navigator-facet projects-facet button-link active"
        data-key={2}
        onClick={[Function]}
        role="checkbox"
        tabIndex={0}
        type="button"
      >
        <span
          className="facet-name"
        >
          2
        </span>
      </button>
    </li>
    <li
      key="3"
    >
      <button
        aria-checked={false}
        aria-label="3"
        className="facet search-navigator-facet projects-facet button-link"
        data-key={3}
        onClick={[Function]}
        role="checkbox"
        tabIndex={0}
        type="button"
      >
        <span
          className="facet-name"
        >
          3
        </span>
      </button>
    </li>
  </ul>
</div>
`;

exports[`renders no results 1`] = `
<div
  className="search-navigator-facet-box"
  data-key="foo"
>
  <div
    className="search-navigator-facet-empty"
  >
    <em>
      projects.facets.no_available_filters_clear_others
    </em>
  </div>
</div>
`;

exports[`renders selected 1`] = `
<div
  className="search-navigator-facet-box"
  data-key="foo"
>
  <ul
    className="search-navigator-facet-list projects-facet-list"
  >
    <li
      key="1"
    >
      <button
        aria-checked={false}
        aria-label="1"
        className="facet search-navigator-facet projects-facet button-link"
        data-key={1}
        onClick={[Function]}
        role="checkbox"
        tabIndex={0}
        type="button"
      >
        <span
          className="facet-name"
        >
          1
        </span>
      </button>
    </li>
    <li
      className="active"
      key="2"
    >
      <button
        aria-checked={true}
        aria-label="2"
        className="facet search-navigator-facet projects-facet button-link active"
        data-key={2}
        onClick={[Function]}
        role="checkbox"
        tabIndex={0}
        type="button"
      >
        <span
          className="facet-name"
        >
          2
        </span>
      </button>
    </li>
    <li
      key="3"
    >
      <button
        aria-checked={false}
        aria-label="3"
        className="facet search-navigator-facet projects-facet button-link"
        data-key={3}
        onClick={[Function]}
        role="checkbox"
        tabIndex={0}
        type="button"
      >
        <span
          className="facet-name"
        >
          3
        </span>
      </button>
    </li>
  </ul>
</div>
`;
